tests/negative/array/array_invalid_type_data_push.tx
// EXPECTED: COMPILE_ERROR
// Description: Test invalid type data push on arrays.

function main() {
    let arr: int[] = [1, 3, 4];
    
 
    // Case 1: invalid type data push
    arr.push("34");


}
